--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title">
-                        Choose The Best Car - Dream Ops! -----> EXAM!!
+                        Choose The Best Car - Dream Ops!
                     </h1>
                         <!-- Ceci est un test -->
                     <h2 class="home__subtitle">
